# wizard-wars

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: lib.rs
src/client/: mod.rs
src/common/: components.rs  messages.rs  mod.rs  network.rs
src/server/: lobby.rs  mod.rs  states.rs
src/server/network/: mod.rs
src/server/states/: init_state.rs  lobby_state.rs  mod.rs
src/server/util/: mod.rs
wizardwars_client/: Cargo.toml
wizardwars_client/assets/: Arena1.gltf
wizardwars_client/src/: arena.rs  camera.rs  lib.rs  lobby.rs  network.rs
wizardwars_server/: Cargo.toml
wizardwars_server/src/: arena.rs  battle.rs  lib.rs  loading.rs  lobby.rs  result.rs  shopping.rs
wizardwars_server/src/network/: mod.rs
wizardwars_server/src/util/: mod.rs
wizardwars_shared/: Cargo.toml
wizardwars_shared/src/: components.rs  events.rs  lib.rs  messages.rs  network.rs  resources.rs
wizardwars_shared/src/components/: damage.rs  health.rs  mod.rs
wizardwars_shared/src/messages/: client_messages.rs  ecs_message.rs  mod.rs  server_messages.rs
wizardwars_shared/src/network/: mod.rs
wizardwars_shared/src/network/sync/: mod.rs  packet.rs
wizardwars_shared/src/systems/: mod.rs
