[package]
authors = ["vigdail <vigdail.dev@gmail.com>"]
edition = "2018"
name = "wizardwars_client"
version = "0.1.0"

[dependencies]
bevy = {version = "0.5.0", features = ["dynamic"]}
bevy_networking_turbulence = "0.3.3"
serde = {version = "1.0.130", features = ["derive"]}
turbulence = "0.3.0"
wizardwars_shared = {path = "../wizardwars_shared"}
