[package]
authors = ["vigdail <vigdail.dev@gmail.com>"]
edition = "2018"
name = "wizardwars_server"
version = "0.1.0"

[dependencies]
bevy = {version = "0.5.0", default-features = false, features = ["dynamic"]}
bevy_networking_turbulence = {git = "https://github.com/vigdail/bevy_networking_turbulence.git", branch = "bugfix/heartbeat_and_channels"}
serde = {version = "1.0.130", features = ["derive"]}
turbulence = "0.3.0"
wizardwars_shared = {path = "../wizardwars_shared"}
